--- a/www/Pages/Privacy.cshtml
+++ b/www/Pages/Privacy.cshtml
@@ -5,4 +5,5 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>This ain't a corporation, this is just one dev trying out stuff.</p>
+
