--- a/www/Pages/Shared/_Layout.cshtml
+++ b/www/Pages/Shared/_Layout.cshtml
@@ -3,27 +3,64 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - www.roman015.com</title>
+    <title>@ViewData["Title"] - Roman015</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    @RenderSection("Header", required: false)
+@{
+
+}
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">www.roman015.com</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Roman015</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                <div class="navbar-collapse collapse d-sm-inline-flex">
+                    <ul class="navbar-nav" >
+                        <li class="nav-item" style="display: none;">
+                            <a class="nav-link text-dark" target="_blank" href="http://blog.roman015.com">Blog</a>
                         </li>
-                        <li class="nav-item">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item" style="display: none;">
+                                <a class="nav-link text-dark" href="/Factorio">Factorio</a>
+                            </li>
+                        }
+                        <li class="nav-item" style="display: none;">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto" >
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUser" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    @User.Identity.Name
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdownUser">
+                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" href="#">Change Password</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-controller="Session" asp-action="SignOut">Logout</a>
+                                </div>                                
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownGuest" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Guest
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdownGuest">
+                                <a class="dropdown-item" asp-controller="Session" asp-action="SignIn">Login</a>                                
+                                </div>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -37,7 +74,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - www.roman015.com - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2020 - Roman015 - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
