Basic dotNet worker to log stuff
For the most part, blindly copied this over from my
droplet_provisioner project

--- a/.provision/ansible_config/roles/setting-up-webapp/templates/webapp.service.j2
+++ b/.provision/ansible_config/roles/setting-up-webapp/templates/webapp.service.j2
@@ -6,7 +6,7 @@ WorkingDirectory=/var/www/site-www
 ExecStart=/usr/bin/dotnet /var/www/site-www/bin/Debug/netcoreapp3.1/publish/www.roman015.com.dll
 Restart=always
 RestartSec=10
-SyslogIdentifier=webapp
+SyslogIdentifier=dotNetWebapp
 User={{ webapp_user }}
 Environment=ASPNETCORE_ENVIRONMENT=Production
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false
