update DNS records dynamically
the secrets are kept on circleci as environment variables.

--- a/.provision/ansible_config/roles/setting-up-webapp/templates/dotnet_webapp.j2
+++ b/.provision/ansible_config/roles/setting-up-webapp/templates/dotnet_webapp.j2
@@ -15,4 +15,9 @@ server {
     listen 80;
     listen [::]:80;
 
+    server_name {{ dns_www_record }}.{{ dns_zone }}
+                ""
+                {{ working_host }}
+                ;
+
 }
