Updating service path

--- a/.provision/ansible_config/roles/setting-up-blog/templates/blogapp.service.j2
+++ b/.provision/ansible_config/roles/setting-up-blog/templates/blogapp.service.j2
@@ -3,7 +3,7 @@ Description=dotNet blogapp
 
 [Service]
 WorkingDirectory=/var/www/site-blog
-ExecStart=/usr/bin/dotnet /var/www/site-blog/bin/Debug/netcoreapp2.1/publish/www.roman015.com.dll
+ExecStart=/usr/bin/dotnet /var/www/site-blog/bin/Debug/netcoreapp3.1/publish/blog.roman015.com.dll
 Restart=always
 RestartSec=10
 SyslogIdentifier=dotNetBlogapp
