--- a/.provision/ansible_config/roles/setting-up-blog/templates/dotnet_blogapp.j2
+++ b/.provision/ansible_config/roles/setting-up-blog/templates/dotnet_blogapp.j2
@@ -1,21 +1,27 @@
 server {
 
+  server_name {{ dns_blog_record }}.{{ dns_zone }}
+              ;
 
-   location / {
-     proxy_pass http://localhost:6000;
-     proxy_http_version 1.1;
-     proxy_set_header Upgrade $http_upgrade;
-     proxy_set_header Connection keep-alive;
-     proxy_set_header Host $host;
-     proxy_cache_bypass $http_upgrade;
-     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     proxy_set_header X-Forwarded-Proto $scheme;
-    }
+  location / {
+    proxy_pass http://localhost:6000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection keep-alive;
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
 
-    listen 80;
-    listen [::]:80;
+  listen 80;
+  listen [::]:80;
 
-    server_name {{ dns_blog_record }}.{{ dns_zone }}
-                ;
+  # SSL configuration (inspired by Certbot)
+  listen [::]:443 ssl ipv6only=on;
+  listen 443 ssl;
+  ssl_certificate /etc/letsencrypt/live/{{ dns_zone }}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/{{ dns_zone }}/privkey.pem;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 }
