Fix for https in www for ansible

--- a/.provision/ansible_config/roles/setting-up-webapp/templates/appsettings.json.j2
+++ b/.provision/ansible_config/roles/setting-up-webapp/templates/appsettings.json.j2
@@ -19,5 +19,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Urls": "https://localhost:5000"
 }
