--- a/.provision/ansible_config/roles/setting-up-worker/templates/worker.service.j2
+++ b/.provision/ansible_config/roles/setting-up-worker/templates/worker.service.j2
@@ -22,6 +22,7 @@ Restart=always
 RestartSec=5
 
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false 
+Environment=WORKER_DISCORD_BOT_TOKEN={{ worker_discord_bot_token }}
 
 [Install]
 WantedBy=multi-user.target
