random emoji, adding environment variables

--- a/.provision/ansible_config/roles/setting-up-worker/templates/worker.service.j2
+++ b/.provision/ansible_config/roles/setting-up-worker/templates/worker.service.j2
@@ -23,6 +23,7 @@ RestartSec=5
 
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false 
 Environment=WORKER_DISCORD_BOT_TOKEN={{ worker_discord_bot_token }}
+Environment=DO_API_TOKEN={{ terraria_dotoken }}
 
 [Install]
 WantedBy=multi-user.target
