Save dropbox access token to remote droplet.

--- a/.provision/ansible_config/roles/scripts-to-manage-terraria-server/templates/terraria-server-env-vars.sh.j2
+++ b/.provision/ansible_config/roles/scripts-to-manage-terraria-server/templates/terraria-server-env-vars.sh.j2
@@ -5,3 +5,6 @@ export DO_API_TOKEN={{ terraria_dotoken }}  # for ansible script
 # Settings for discord bot relaying terraria chats
 export TERRARIA_DISCORD_BOT_TOKEN="{{ terraria_discord_bot_token }}"
 export TERRARIA_DISCORD_CHANNEL_ID={{ terraria_discord_channel }}
+
+# export Dropbox token
+export DROPBOX_ACCESS_TOKEN="{{ dropbox_access_token }}"
