--- a/.provision/ansible_config/roles/setting-up-worker/templates/worker.service.j2
+++ b/.provision/ansible_config/roles/setting-up-worker/templates/worker.service.j2
@@ -24,6 +24,7 @@ RestartSec=5
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false 
 Environment=WORKER_DISCORD_BOT_TOKEN={{ worker_discord_bot_token }}
 Environment=DO_API_TOKEN={{ terraria_dotoken }}
+Environment=DROPBOX_ACCESS_TOKEN={{ dropbox_access_token }}
 
 [Install]
 WantedBy=multi-user.target
