updating worker environment variables

--- a/.provision/ansible_config/roles/setting-up-worker/templates/worker.service.j2
+++ b/.provision/ansible_config/roles/setting-up-worker/templates/worker.service.j2
@@ -25,6 +25,9 @@ Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false
 Environment=WORKER_DISCORD_BOT_TOKEN={{ worker_discord_bot_token }}
 Environment=DO_API_TOKEN={{ terraria_dotoken }}
 Environment=DROPBOX_ACCESS_TOKEN={{ dropbox_access_token }}
+Environment=TERRARIA_DISCORD_BOT_TOKEN={{ terraria_discord_bot_token }}
+Environment=TERRARIA_DISCORD_CHANNEL_ID={{ terraria_discord_channel }}
+
 
 [Install]
 WantedBy=multi-user.target
