Updating appsettings.json.j2
I forgot that this got over-ridden by the ansible script...

--- a/.provision/ansible_config/roles/setting-up-webapp/templates/appsettings.json.j2
+++ b/.provision/ansible_config/roles/setting-up-webapp/templates/appsettings.json.j2
@@ -19,6 +19,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Sentry": {
+    "Dsn": "https://d257da19dc22412fa4bc587737dbd577@o400378.ingest.sentry.io/5258767",
+    "IncludeRequestPayload": true,
+    "SendDefaultPii": true,
+    "MinimumBreadcrumbLevel": "Debug",
+    "MinimumEventLevel": "Warning",
+    "AttachStackTrace": true,
+    "Debug": true,
+    "DiagnosticsLevel": "Error"
+  },
   "AllowedHosts": "*",
   "Urls": "https://localhost:5000"
 }
