change error tracing levels down to debug

--- a/.provision/ansible_config/roles/setting-up-webapp/templates/appsettings.json.j2
+++ b/.provision/ansible_config/roles/setting-up-webapp/templates/appsettings.json.j2
@@ -24,10 +24,10 @@
     "IncludeRequestPayload": true,
     "SendDefaultPii": true,
     "MinimumBreadcrumbLevel": "Debug",
-    "MinimumEventLevel": "Warning",
+    "MinimumEventLevel": "Debug",
     "AttachStackTrace": true,
     "Debug": true,
-    "DiagnosticsLevel": "Error"
+    "DiagnosticsLevel": "Debug"
   },
   "AllowedHosts": "*",
   "Urls": "https://localhost:5000"
