--- a/www/Pages/QRCode/Index.cshtml
+++ b/www/Pages/QRCode/Index.cshtml
@@ -1,19 +1,45 @@
 @page
-@model QRCodeModel
 @{
     ViewData["Title"] = "QR Code Generator";
+
+    string textdata = string.Empty;
+    string qrCodeImgUrl = string.Empty;
+
+    if(Request.Method == "POST")
+    {
+        textdata = Request.Form["textdata"];
+        qrCodeImgUrl = GenerateQRcodeUrl(textdata);
+    }
+    
+}
+@functions{
+    private string GenerateQRcodeUrl(string input)
+        {
+            if(string.IsNullOrWhiteSpace(input))
+            {
+                return string.Empty;
+            }
+
+            return "/QRGenerator/Image/png?input="
+            + System.Web.HttpUtility.UrlEncode(input);
+        }
 }
 <h1>@ViewData["Title"]</h1>
 
 <br/>
 
 <div class="container">
-    <form asp-page-handler="GenerateCode" method="post">
+    <form method="post">
         <div class="form-group">
-            <input type="text" name="textdata" class="form-control" value='@Model.QRText' placeholder="Enter text to use in the QR Code here And press Generate" title="Enter text to use in the QR Code" />
+            <input type="text" name="textdata" class="form-control" 
+                value="@textdata" 
+                placeholder="Enter text to use in the QR Code here And press Generate" 
+                title="Enter text to use in the QR Code" />
         </div>
         <button class="btn btn-success">Generate</button>
-    </form>
-    <br/>
-    <img src='@Model.QRUrl'></img>
+        <br/>
+        <img name="qrCodeImg" 
+            src="@qrCodeImgUrl" 
+            title="@textdata"/>
+    </form>    
 </div>
