Added Guess The Number Game using Razor

--- a/www/Pages/Index.cshtml
+++ b/www/Pages/Index.cshtml
@@ -48,6 +48,13 @@
                 </br>
                 QR Code Generator
             </button>
+        </div>        
+        <div class="col-sm-12 col-lg-4">
+            <button type="button" onclick="location.href='GuessTheNumber';" class="btn btn-info btn-block btn-lg">
+                <img class="btn-icon" src="~/img/Dice.png"/>
+                </br>
+                Guess The Number Game
+            </button>
         </div>
         <div class="col-sm-12 col-lg-4">
             <button type="button" onclick="location.href='https://www.buymeacoffee.com/roman015';" class="btn btn-warning btn-block btn-lg bmc-button">
