ngix take www as root domain
and undo the HTTP redirct experiment

--- a/.provision/ansible_config/roles/install-nginx/templates/default_nginx.j2
+++ b/.provision/ansible_config/roles/install-nginx/templates/default_nginx.j2
@@ -3,5 +3,5 @@ server {
 
   server_name _;
 
-  return 301 https://{{ dns_www_record }}.{{ dns_zone }};
+  return 301 https://$host$request_uri;
 }
