--- a/.provision/ansible_config/roles/setting-up-webapp/templates/dotnet_webapp.j2
+++ b/.provision/ansible_config/roles/setting-up-webapp/templates/dotnet_webapp.j2
@@ -3,6 +3,8 @@ server {
   server_name {{ dns_www_record }}.{{ dns_zone }}
               ""
               {{ working_host }}
+              ""
+              {{ dns_zone }}
               ;
 
   location / {
