Dummy File Generator Added

--- a/www/Pages/Index.cshtml
+++ b/www/Pages/Index.cshtml
@@ -57,6 +57,13 @@
             </button>
         </div>
         <div class="col-sm-12 col-lg-4">
+            <button type="button" onclick="location.href='DummyFile';" class="btn btn-info btn-block btn-lg">
+                <img class="btn-icon" src="~/img/File.png"/>
+                </br>
+                Dummy File Generator
+            </button>
+        </div>
+        <div class="col-sm-12 col-lg-4">
             <button type="button" onclick="location.href='https://www.buymeacoffee.com/roman015';" class="btn btn-warning btn-block btn-lg bmc-button">
                 <img class="btn-icon" src="~/img/bmc-new-btn-logo.png"/>
                 </br>
