--- a/.provision/ansible_config/roles/setting-up-webapp/templates/appsettings.json.j2
+++ b/.provision/ansible_config/roles/setting-up-webapp/templates/appsettings.json.j2
@@ -30,5 +30,6 @@
     "DiagnosticsLevel": "Debug"
   },
   "AllowedHosts": "*",
-  "Urls": "https://localhost:5000"
+  "Urls": "https://localhost:5000",
+  "UrlShortenerConnectionString": "{{ urlshortener_connectionstring }}"
 }
