--- a/.provision/ansible_config/roles/setting-up-webapp/templates/webapp.service.j2
+++ b/.provision/ansible_config/roles/setting-up-webapp/templates/webapp.service.j2
@@ -10,6 +10,7 @@ SyslogIdentifier=dotNetWebapp
 User={{ webapp_user }}
 Environment=ASPNETCORE_ENVIRONMENT=Production
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false
+Environment=CIV6NOTIBOT_DISCORD_BOT_TOKEN={{ civ6notibot_discord_bot_token }}
 
 [Install]
 WantedBy=multi-user.target
