QRCode - Image is no longer wider than the window width (for mobile devices)

--- a/Pages/QRCode.razor
+++ b/Pages/QRCode.razor
@@ -18,6 +18,7 @@
     @if (!string.IsNullOrEmpty(qrCodeImgString))
     {
     <img name="qrCodeImg"
+         style="max-width:100%"
             src="@qrCodeImgString"
             title="@textdata" />
     }
