--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -5,7 +5,7 @@
     </button>
 </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+<div class="@NavMenuCssClass" style="height:100% !important;" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -17,6 +17,8 @@
                 <img class="icon icon-github" /> GitHub
             </a>
         </li>
+    </ul>
+    <ul class="nav flex-column align-bottom-m">        
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="About">
                 <span class="oi oi-question-mark" aria-hidden="true"></span> About
