--- a/Shared/CookieNotifier.razor
+++ b/Shared/CookieNotifier.razor
@@ -2,10 +2,12 @@
 
 @if (!IsCookiesAccepted)
 {
-<div class="container cookie-notifier">
+<div class="container-fluid cookie-notifier animated fadeIn">
     <div class="row justify-content-center align-items-center">
         <div class="form-inline">
-            <span class="mr-1 cookie-notifier-text">Heads up, this site uses Cookies!</span>
+            <span class="mr-1 cookie-notifier-text">Heads up, this site uses Cookies!</span>            
+        </div>
+        <div class="form-inline">
             <button class="btn btn-success mr-1" @onclick="OnCookiesAccepted">Okay</button>
             <a href="https://www.learn-about-cookies.com/" target="_blank" class="btn btn-warning mr-1">Tell me More</a>
         </div>
