--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,11 +1,14 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Roman015</a>
+    <a class="navbar-brand" href="">
+        <img src="/icon-512.png" width="32" height="32" class="d-inline-block align-middle" alt="">
+        Roman015
+    </a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
 </div>
 
-<div class="@NavMenuCssClass" style="height:100% !important;" @onclick="ToggleNavMenu">
+<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
