Added Timezone Tool

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -12,19 +12,19 @@
             </a>
         </div>
         <div class="col-sm-12 col-lg-4">
-            <NavLink href="QRCode" class="btn btn-info btn-block btn-lg my-1" 
+            <NavLink href="QRCode" class="btn btn-info btn-block btn-lg my-1"
                      title="Generate QR Codes">
                 <img class="btn-icon" src="img/QRCode.png" />
-                <br/>
+                <br />
                 Create QR Code
             </NavLink>
         </div>
         <div class="col-sm-12 col-lg-4">
-            <NavLink href="GuessTheNumber" 
+            <NavLink href="GuessTheNumber"
                      title="Guess the Number Between 1 and 100"
                      class="btn btn-info btn-block btn-lg my-1">
                 <img class="btn-icon" src="img/Dice.png" />
-                <br/>
+                <br />
                 Guess The Number
             </NavLink>
         </div>
@@ -33,16 +33,25 @@
                      title="Generate Dummy files of specified sizes"
                      class="btn btn-info btn-block btn-lg my-1">
                 <img class="btn-icon" src="img/File.png" />
-                <br/>
-                Create Dummy File 
+                <br />
+                Create Dummy File
             </NavLink>
         </div>
         <div class="col-sm-12 col-lg-4">
-            <a href="https://www.buymeacoffee.com/roman015" target="_blank" 
+            <NavLink href="TimezoneTool"
+                     title="Timezone Tool"
+                     class="btn btn-info btn-block btn-lg my-1">
+                <img class="btn-icon" src="img/clocks.png" />
+                <br />
+                Timezone Tool
+            </NavLink>
+        </div>
+        <div class="col-sm-12 col-lg-4">
+            <a href="https://www.buymeacoffee.com/roman015" target="_blank"
                class="btn btn-warning btn-block btn-lg bmc-button my-1"
                title="Donations welcome!">
                 <img class="btn-icon" src="img/bmc-new-btn-logo.png" />
-                <br/>
+                <br />
                 Wanna Buy Me Coffee?
             </a>
         </div>
