--- a/Pages/TimezoneTool.razor
+++ b/Pages/TimezoneTool.razor
@@ -4,7 +4,7 @@
 
 <div class="container text-center">
     <div class="row justify-content-md-center">
-        <div class="col col-sm-12 col-lg-4 py-2">
+        <div class="col-sm-12 col-lg-4 py-2">
             <button class="btn btn-info btn-block btn-lg my-1" @onclick="AddNewTimeZone">
                 <span class="oi oi-plus" aria-hidden="true"></span> Add Clock
             </button>
@@ -15,8 +15,8 @@
         {
             int idx = i;
             var item = timezones[idx];
-            <div class="col col-xs-12 col-sm-12 col-lg-4">
-                <div class="border p-1 shadow p-1 ">
+            <div class="col-sm-12 col-lg-6">
+                <div class="border shadow p-2 my-2">
                     <button class="close" @onclick="(() => RemoveTimeZone(idx))">x</button>
                     <Clock displayTimeZone="item"
                            selectedUtcDateTime="displayedDateTime"
@@ -27,7 +27,7 @@
         }
         @if(timezones.Count == 0)
         {
-            <div class="col col-12 p-1 text-center">
+            <div class="col-12 p-1 text-center">
                 <label>Click on the "Add Clock" button to add a clock to compare with</label>
             </div>
         }
