Removed build warnings

--- a/Components/Clock.razor
+++ b/Components/Clock.razor
@@ -57,7 +57,7 @@
             }
             catch(Exception e)
             {
-                Console.Error.WriteLine("Invalid TimeZone: " + value);
+                Console.Error.WriteLine("Invalid TimeZone: " + value + ", Error: " + e.Message);
             }
             _selectedTimeZone = value;
         }
