--- a/Pages/GuessTheNumber.razor
+++ b/Pages/GuessTheNumber.razor
@@ -64,7 +64,7 @@
     bool isGameOver = false;
     ElementReference guessInput;
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
         ResetGame();
     }
