--- a/Pages/Toys/QRCode.razor
+++ b/Pages/Toys/QRCode.razor
@@ -1,27 +1,47 @@
 ﻿@page "/QRCode"
 @using QRCoder
 
-<h3>QR Code Generator</h3>
-
-<br />
-
 <div class="container">
-    <div class="form-group">
-        <input type="text" name="textdata" class="form-control" autofocus="autofocus"
-                @bind="@textdata"
-                @onkeyup="@((e) => { if (e.Key.Contains("Enter")) { SubmitTextData(); } })"
-                placeholder="Enter text to use in the QR Code here And press Generate"
-                title="Enter text to use in the QR Code" />
+
+    <div class="row">
+        <div class="col-12">
+            <h3>QR Code Generator</h3>
+        </div>
     </div>
-    <button class="btn btn-success" @onclick="SubmitTextData">Generate</button>
-    <br />
-    @if (!string.IsNullOrEmpty(qrCodeImgString))
-    {
-    <img name="qrCodeImg"
-         style="max-width:100%"
-            src="@qrCodeImgString"
-            title="@textdata" />
-    }
+
+    <div class="row">
+        <div class="col-12">
+            <div class="form-group">
+                <input type="text" name="textdata" class="form-control" autofocus="autofocus"
+                       @bind="@textdata"
+                       @onkeyup="@((e) => {
+                                       if (!string.IsNullOrEmpty(e.Key) && e.Key.Contains("Enter")) { 
+                                           SubmitTextData(); 
+                                       } 
+                                   })"
+                       placeholder="Enter text to use in the QR Code here And press Generate"
+                       title="Enter text to use in the QR Code" />
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <button class="btn btn-success" @onclick="SubmitTextData">Generate</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 py-2">
+            @if (!string.IsNullOrEmpty(qrCodeImgString))
+            {
+                <img name="qrCodeImg"
+                     style="max-width:100%"
+                     src="@qrCodeImgString"
+                     title="@textdata" />
+            }
+        </div>
+    </div>      
 </div>
 
 @code {
