--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@inject NavigationManager Navigation
+@inject SignOutSessionStateManager SignOutManager
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">
         <img src="/icon-512.png" width="32" height="32" class="d-inline-block align-middle" alt="">
         Roman015
@@ -20,8 +23,37 @@
                 <img class="icon icon-github" /> GitHub
             </a>
         </li>
+        <li class="nav-item px-3">
+            <AuthorizeView>
+                <Authorized>
+                    <NavLink class="nav-link" href="AuthorizedMenu">
+                        <span class="oi oi-person" aria-hidden="true"></span> @context.User.Identity.Name
+                    </NavLink>
+                </Authorized>
+                <Authorizing>
+                    <a class="nav-link">
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> 
+                        <span class="px-3">Loading...</span>
+                    </a>
+                </Authorizing>
+                <NotAuthorized>
+                    <a class="nav-link" href="authentication/login">
+                        <span class="oi oi-account-login" aria-hidden="true"></span> Login
+                    </a>
+                </NotAuthorized>
+            </AuthorizeView>
+        </li>
     </ul>
-    <ul class="nav flex-column align-bottom-m">        
+    <ul class="nav flex-column align-bottom-m">
+        <li class="nav-item px-3">
+            <AuthorizeView>
+                <Authorized>
+                    <a class="nav-link" @onclick="BeginSignOut">
+                        <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
+                    </a>
+                </Authorized>
+            </AuthorizeView>
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="About">
                 <span class="oi oi-question-mark" aria-hidden="true"></span> About
@@ -43,5 +75,11 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    private async Task BeginSignOut(MouseEventArgs args)
+    {
+        await SignOutManager.SetSignOutState();
+        Navigation.NavigateTo("authentication/logout");
     }
 }
