--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,5 +1,8 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -7,4 +10,4 @@
 @using Microsoft.JSInterop
 @using HomePage
 @using HomePage.Shared
-@using HomePage.Components 
+@using HomePage.Components
