--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -15,12 +15,17 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true" /> Home
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <a class="nav-link" href="https://blog.roman015.com" target="_blank">
+                <img class="icon icon-blog" src="img/Blog.png" /> Blog &nbsp;<span class="oi oi-external-link tiny-icon" aria-hidden="true" />
+            </a>
+        </li>
+        <li class="nav-item px-3">
             <a class="nav-link" href="https://github.com/roman015/roman015.com" target="_blank">
-                <img class="icon icon-github" /> GitHub
+                <img class="icon icon-github" /> GitHub &nbsp;<span class="oi oi-external-link tiny-icon" aria-hidden="true" />
             </a>
         </li>
         <li class="nav-item px-3">
@@ -32,7 +37,7 @@
                 </Authorized>
                 <Authorizing>
                     <a class="nav-link">
-                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> 
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                         <span class="px-3">Loading...</span>
                     </a>
                 </Authorizing>
