--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Net.Http
+@using System.Net.Http.Headers
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Components.Authorization
