--- a/Pages/Authentication.razor
+++ b/Pages/Authentication.razor
@@ -1,22 +1,6 @@
-﻿@* Client/Pages/Authentication.razor *@
-
-@page "/authentication/{action}"
+﻿@page "/authentication/{action}"
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-@using Microsoft.Extensions.Configuration
-
-@inject NavigationManager Navigation
-@inject IConfiguration Configuration
-
-<RemoteAuthenticatorView Action="@Action">
-    <LogOut>
-        @{
-            var authority = (string)Configuration["Auth0:Authority"];
-            var clientId = (string)Configuration["Auth0:ClientId"];
-
-            Navigation.NavigateTo($"{authority}/v2/logout?client_id={clientId}");
-        }
-    </LogOut>
-</RemoteAuthenticatorView>
+<RemoteAuthenticatorView Action="@Action" />
 
 @code{
     [Parameter] public string Action { get; set; }
