Http Request Modified

--- a/Pages/AuthorizedMenu.razor
+++ b/Pages/AuthorizedMenu.razor
@@ -39,18 +39,21 @@
             {
                 requestMessage.Headers.Authorization =
                   new AuthenticationHeaderValue("Bearer", token.Value);
-                var response = await Http.SendAsync(requestMessage);
-                var temp = response.Content.ReadAsStringAsync().ContinueWith((val) =>
-                {
-                    if (!val.IsFaulted && !string.IsNullOrWhiteSpace(val.Result))
+                var temp = Http.SendAsync(requestMessage)
+                    .ContinueWith((response) =>
                     {
-                        Result = val.Result;
-                    }
-                    else
-                    {
-                        Result = "Something went Wrong";
-                    }
-                });
+                        response.Result.Content.ReadAsStringAsync().ContinueWith((val) =>
+                        {
+                            if (!val.IsFaulted && !string.IsNullOrWhiteSpace(val.Result))
+                            {
+                                Result = val.Result;
+                            }
+                            else
+                            {
+                                Result = "Something went Wrong";
+                            }
+                        });
+                    });                
             }
         }
 
